language-server/src/tests/snapshots/gleam_language_server__tests__action__qualified_to_unqualified_import_different_constructors.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport option\n\npub fn main() {\n  option.Some(1)\n  option.None\n}"
---
----- BEFORE ACTION

import option

pub fn main() {
  option.Some(1)
        ▔▔▔▔▔↑  
  option.None
}


----- AFTER ACTION

import option.{Some}

pub fn main() {
  Some(1)
  option.None
}
