language-server/src/tests/snapshots/gleam_language_server__tests__action__qualified_to_unqualified_import_in_case_without_argument.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wobble\n\npub fn main() {\n  case wobble.Wibble {\n    wobble.Wibble -> 1\n    wobble.Wubble(1) -> 2\n  }\n}\n"
---
----- BEFORE ACTION

import wobble

pub fn main() {
  case wobble.Wibble {
             ▔▔↑      
    wobble.Wibble -> 1
    wobble.Wubble(1) -> 2
  }
}


----- AFTER ACTION

import wobble.{Wibble}

pub fn main() {
  case Wibble {
    Wibble -> 1
    wobble.Wubble(1) -> 2
  }
}
