language-server/src/tests/snapshots/gleam_language_server__tests__action__qualified_to_unqualified_import_in_constant_record.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport option\n\nconst some = option.Some(1)\n"
---
----- BEFORE ACTION

import option

const some = option.Some(1)
                    ↑      


----- AFTER ACTION

import option.{Some}

const some = Some(1)
