language-server/src/tests/snapshots/gleam_language_server__tests__action__qualified_to_unqualified_import_in_constant_var.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport option\n\nconst none = option.None\n"
---
----- BEFORE ACTION

import option

const none = option.None
                    ↑   


----- AFTER ACTION

import option.{None}

const none = None
