language-server/src/tests/snapshots/gleam_language_server__tests__action__qualified_to_unqualified_import_in_pattern.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport option\n\npub fn main() -> Int {\n  case option.Some(1) {\n    option.Some(value) -> value\n    option.None -> 0\n  }\n}\n"
---
----- BEFORE ACTION

import option

pub fn main() -> Int {
  case option.Some(1) {
    option.Some(value) -> value
          ▔▔▔▔▔▔▔▔↑            
    option.None -> 0
  }
}


----- AFTER ACTION

import option.{Some}

pub fn main() -> Int {
  case Some(1) {
    Some(value) -> value
    option.None -> 0
  }
}
